[package]
name = "proxy_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["std", "derive"] }
env_logger = "0.11.3"
log = "0.4.21"
logged-stream = "0.3.5"
tokio = { version = "1.38.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time"
], default-features = false }