[package]
name = "proxy_logger"
version = "0.1.3"
authors = ["Elijah Samson <elijahobara357@gmail.com>"]
description = "Command line interface for proxying TCP connections with payload output into console which can be formatted different ways."
keywords = ["network", "tcp", "proxy", "logging", "debugging"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "network-programming"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/obaraelijah/proxy_logger"
homepage = "https://github.com/obaraelijah/proxy_logger"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["std", "derive"] }
env_logger = "0.11.3"
log = "0.4.21"
logged-stream = "0.4.0"
tokio = { version = "1.38.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time"
], default-features = false }